fix tables on mobile WIP

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,3 +1,5 @@
+@import 'mixins';
+
 .yt-embed {
   position: relative;
   width: 100%;
@@ -23,7 +25,27 @@ h3 {
   border-color: antiquewhite;
 }
 
+.table {
+  &__td {
+    &--narrow {
+      max-width: 35px;
+      border: none;
+      padding: 0.8rem 0;
+    }
+  }
+}
+
 .table tbody tr:last-child td,
 .table tbody tr:last-child th {
   border-bottom-width: 2px;
+}
+
+@media (max-width: 1215px) {
+  .is-two-thirds {
+    @include responsiveTable;
+  }
+}
+
+@media (max-width: 760px) {
+  @include responsiveTable;
 }
